fix IE menu overflow

--- a/src/styles/view-controls.scss
+++ b/src/styles/view-controls.scss
@@ -30,7 +30,6 @@
 
         .separator {
             flex: 1;
-            min-width: 10rem;
         }
     }
 
